# cubevision-dotfiles

./: .gitattributes  .gitignore  README.md
alacritty/: alacritty.toml
awr2944/: .gitignore  README.md
awr2944/docker/: Dockerfile  docker-compose.yml  entrypoint.sh  install-ti-sdk.sh
awr2944/docs/: 01-drivers.md  02-toolchains.md  03-rust-integration.md  04-build-firmware.md  05-troubleshooting.md  architecture.md
awr2944/rust/: Cargo.toml
awr2944/rust/firmware-r5f/: Cargo.toml  memory.x
awr2944/rust/firmware-r5f/.cargo/: config.toml
awr2944/rust/firmware-r5f/src/: main.rs
awr2944/rust/host-capture/: Cargo.toml
awr2944/rust/host-capture/src/: main.rs
awr2944/rust/tlv-parser/: Cargo.toml
awr2944/rust/tlv-parser/src/: lib.rs
awr2944/scripts/: bootstrap-linux-arm64.sh  bootstrap-macos.sh  build-firmware.sh  download-uniflash.sh  flash-uniflash.sh  verify-env.sh
awr2944/udev/: 71-ti-xds110.rules
bspwm/: bspwmrc
dev/: Cross.toml  README.md  flake.nix
dev/hello-server/: .env  .env.production  Cargo.toml
dev/hello-server/src/: main.rs
guides/: 01-flash-system.md  02-environment.md  03-cuda-cudnn.md  04-jtop.md  05-docker.md  06-gpio.md  07-camera.md  08-pytorch.md  09-tensorrt.md  10-yolo.md  11-ollama-llm.md  12-deepstream.md  13-performance.md  README.md
host/: Makefile
installer/: .gitignore  go.mod  main.go  run.sh
javascript/: .eslintrc.json  npmrc
mmwave/: setup-mmwave.sh
nanoclaw/: README.md  openclaw.json  openclaw.service  setup-openclaw.sh
neo4j/: README.md  neo4j.conf  setup-neo4j.sh
nvim/: .neoconf.json  lazyvim.json
nvim/lua/config/: lazy.lua  options.lua
nvim/lua/plugins/: colorscheme.lua
opencv/: setup-opencv-jetson.sh
picom/: picom.conf
polybar/: config.ini  launch.sh
python/: pip.conf  pyproject-template.toml  ruff.toml
pytorch/: setup-pytorch-jetson.sh  torch-test.py
qdrant/: README.md  config.yaml  setup-qdrant.sh
ranger/: rc.conf  rifle.conf  scope.sh
rust/: cargo-config.toml  clippy.toml
scripts/: fix-snap-browsers.sh  install.sh  select-bspwm.sh
sqlite/: README.md  setup-sqlite.sh  sqliterc
sxhkd/: sxhkdrc
tmux/: tmux.conf
vscode/: extensions.json  install-extensions.ps1
windows/: komorebi.bar.json  komorebi.json  scoop-essentials.ps1  wezterm.lua
wsl/: .wslconfig  .wslconfig.threadripper  install.sh
wsl/nvim/: init.lua
wsl/nvim/lua/config/: lazy.lua  options.lua
wsl/nvim/lua/plugins/: colorscheme.lua  extras.lua  lsp.lua
wsl/tmux/: tmux.conf
wsl/zsh/: .zshenv  .zshrc
zsh/: .zshenv  .zshrc
