[package]
name = "host-capture"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Host-side capture + decode for the AWR2944 mmW demo UART stream."

[[bin]]
name = "host-capture"
path = "src/main.rs"

[dependencies]
serialport = { workspace = true }
clap       = { workspace = true }
thiserror  = { workspace = true }
tracing    = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow     = { workspace = true }
tlv-parser = { path = "../tlv-parser" }

[features]
default = []
# Build the JSON exporter (pulls in serde).
json = ["dep:serde", "dep:serde_json"]

[dependencies.serde]
version  = "1.0"
features = ["derive"]
optional = true

[dependencies.serde_json]
version  = "1.0"
optional = true
