[package]
name = "tlv-parser"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Shared no_std parser for TI mmWave TLV (Type-Length-Value) frames."

[features]
default = []
# Enable convenience iterators & dynamic allocations on hosts.
std = []

[dependencies]
